maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:9: error: expected class or object definition
def whoNeedsAMap(x:Int ,y:Int) { // marque le monde (accessible) //
^JediEscaper:37: error: expected class or object definition
def ilEstOuLeBiscuit1():Int = { // trouve l'arriv?e et la marque //
^JediEscaper:49: error: expected class or object definition
def ilEstOuLeBiscuit2(i:Int):Int = {
^